--- a/.github/workflows/build_kylin-aarch64.yml
+++ b/.github/workflows/build_kylin-aarch64.yml
@@ -32,7 +32,8 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           # 使用 Ubuntu aarch64（arm64）镜像
-          image: arm64v8/ubuntu:22.04
+          # ⚠ 从 22.04 改成 20.04（glibc 2.31，更兼容麒麟）
+          image: arm64v8/ubuntu:20.04
           # 挂载工作区到容器内 /workspace
           options: -v ${{ github.workspace }}:/workspace --platform linux/arm64
           shell: bash
@@ -45,7 +46,7 @@ jobs:
             apt-get update
 
             echo "== 安装 Python3 和 pip =="
-            apt-get install -y python3 python3-pip python3-venv
+            apt-get install -y python3 python3-pip python3-venv build-essential
 
             echo "== 升级 pip =="
             pip3 install --upgrade pip
